@@ -20,6 +20,20 @@ end_comment
 
 begin_import
 import|import
+name|com
+operator|.
+name|google
+operator|.
+name|common
+operator|.
+name|collect
+operator|.
+name|Lists
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -656,6 +670,17 @@ argument_list|>
 name|responses
 parameter_list|)
 block|{
+name|Set
+argument_list|<
+name|Object
+argument_list|>
+name|allTerms
+init|=
+operator|new
+name|HashSet
+argument_list|<>
+argument_list|()
+decl_stmt|;
 for|for
 control|(
 name|ShardResponse
@@ -755,26 +780,13 @@ argument_list|(
 name|TERMS_KEY
 argument_list|)
 decl_stmt|;
-if|if
-condition|(
-name|terms
-operator|!=
-literal|null
-condition|)
-block|{
-name|req
+name|allTerms
 operator|.
-name|getContext
-argument_list|()
-operator|.
-name|put
+name|addAll
 argument_list|(
-name|TERMS_KEY
-argument_list|,
 name|terms
 argument_list|)
 expr_stmt|;
-block|}
 name|String
 name|colStatsString
 init|=
@@ -820,6 +832,34 @@ name|colStats
 argument_list|)
 expr_stmt|;
 block|}
+block|}
+if|if
+condition|(
+name|allTerms
+operator|.
+name|size
+argument_list|()
+operator|>
+literal|0
+condition|)
+block|{
+name|req
+operator|.
+name|getContext
+argument_list|()
+operator|.
+name|put
+argument_list|(
+name|TERMS_KEY
+argument_list|,
+name|Lists
+operator|.
+name|newArrayList
+argument_list|(
+name|allTerms
+argument_list|)
+argument_list|)
+expr_stmt|;
 block|}
 if|if
 condition|(
