@@ -1154,6 +1154,361 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+annotation|@
+name|Test
+DECL|method|testMultiCollectionQuery
+specifier|public
+name|void
+name|testMultiCollectionQuery
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+comment|// collection1 and collection2 are collections which have distributed idf enabled
+comment|// collection1_local and collection2_local don't have distributed idf available
+comment|// Only one doc has cat:football in each collection
+comment|// When doing queries across collections we want to test that the query takes into account
+comment|// distributed idf for the collection=collection1,collection2 query.
+comment|// The way we verify is that score should be the same when querying across collection1 and collection2
+comment|// But should be different when querying across collection1_local and collection2_local
+comment|// since the idf is calculated per shard
+name|createCollection
+argument_list|(
+literal|"collection1"
+argument_list|,
+literal|"conf1"
+argument_list|)
+expr_stmt|;
+name|createCollection
+argument_list|(
+literal|"collection1_local"
+argument_list|,
+literal|"conf2"
+argument_list|)
+expr_stmt|;
+name|createCollection
+argument_list|(
+literal|"collection2"
+argument_list|,
+literal|"conf1"
+argument_list|)
+expr_stmt|;
+name|createCollection
+argument_list|(
+literal|"collection2_local"
+argument_list|,
+literal|"conf2"
+argument_list|)
+expr_stmt|;
+name|addDocsRandomly
+argument_list|()
+expr_stmt|;
+comment|//Test against all nodes
+for|for
+control|(
+name|JettySolrRunner
+name|jettySolrRunner
+range|:
+name|solrCluster
+operator|.
+name|getJettySolrRunners
+argument_list|()
+control|)
+block|{
+name|SolrClient
+name|solrClient
+init|=
+operator|new
+name|HttpSolrClient
+argument_list|(
+name|jettySolrRunner
+operator|.
+name|getBaseUrl
+argument_list|()
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|SolrClient
+name|solrClient_local
+init|=
+operator|new
+name|HttpSolrClient
+argument_list|(
+name|jettySolrRunner
+operator|.
+name|getBaseUrl
+argument_list|()
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|SolrQuery
+name|query
+init|=
+operator|new
+name|SolrQuery
+argument_list|(
+literal|"cat:football"
+argument_list|)
+decl_stmt|;
+name|query
+operator|.
+name|setFields
+argument_list|(
+literal|"*,score"
+argument_list|)
+operator|.
+name|add
+argument_list|(
+literal|"collection"
+argument_list|,
+literal|"collection1,collection2"
+argument_list|)
+expr_stmt|;
+name|QueryResponse
+name|queryResponse
+init|=
+name|solrClient
+operator|.
+name|query
+argument_list|(
+literal|"collection1"
+argument_list|,
+name|query
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|2
+argument_list|,
+name|queryResponse
+operator|.
+name|getResults
+argument_list|()
+operator|.
+name|getNumFound
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|float
+name|score1
+init|=
+operator|(
+name|float
+operator|)
+name|queryResponse
+operator|.
+name|getResults
+argument_list|()
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+operator|.
+name|get
+argument_list|(
+literal|"score"
+argument_list|)
+decl_stmt|;
+name|float
+name|score2
+init|=
+operator|(
+name|float
+operator|)
+name|queryResponse
+operator|.
+name|getResults
+argument_list|()
+operator|.
+name|get
+argument_list|(
+literal|1
+argument_list|)
+operator|.
+name|get
+argument_list|(
+literal|"score"
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|"Doc1 score="
+operator|+
+name|score1
+operator|+
+literal|" Doc2 score="
+operator|+
+name|score2
+argument_list|,
+literal|0
+argument_list|,
+name|Float
+operator|.
+name|compare
+argument_list|(
+name|score1
+argument_list|,
+name|score2
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|query
+operator|=
+operator|new
+name|SolrQuery
+argument_list|(
+literal|"cat:football"
+argument_list|)
+expr_stmt|;
+name|query
+operator|.
+name|setFields
+argument_list|(
+literal|"*,score"
+argument_list|)
+operator|.
+name|add
+argument_list|(
+literal|"collection"
+argument_list|,
+literal|"collection1_local,collection2_local"
+argument_list|)
+expr_stmt|;
+name|queryResponse
+operator|=
+name|solrClient_local
+operator|.
+name|query
+argument_list|(
+literal|"collection1_local"
+argument_list|,
+name|query
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|2
+argument_list|,
+name|queryResponse
+operator|.
+name|getResults
+argument_list|()
+operator|.
+name|getNumFound
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|2
+argument_list|,
+name|queryResponse
+operator|.
+name|getResults
+argument_list|()
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+operator|.
+name|get
+argument_list|(
+literal|"id"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|queryResponse
+operator|.
+name|getResults
+argument_list|()
+operator|.
+name|get
+argument_list|(
+literal|1
+argument_list|)
+operator|.
+name|get
+argument_list|(
+literal|"id"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|float
+name|score1_local
+init|=
+operator|(
+name|float
+operator|)
+name|queryResponse
+operator|.
+name|getResults
+argument_list|()
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+operator|.
+name|get
+argument_list|(
+literal|"score"
+argument_list|)
+decl_stmt|;
+name|float
+name|score2_local
+init|=
+operator|(
+name|float
+operator|)
+name|queryResponse
+operator|.
+name|getResults
+argument_list|()
+operator|.
+name|get
+argument_list|(
+literal|1
+argument_list|)
+operator|.
+name|get
+argument_list|(
+literal|"score"
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|"Doc1 score="
+operator|+
+name|score1_local
+operator|+
+literal|" Doc2 score="
+operator|+
+name|score2_local
+argument_list|,
+literal|1
+argument_list|,
+name|Float
+operator|.
+name|compare
+argument_list|(
+name|score1_local
+argument_list|,
+name|score2_local
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 DECL|method|createCollection
 specifier|private
 name|void
